# news_feed

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
n8n_service/: My_workflow.json  parse_email.py  requirements.in  requirements.txt  sample_email.json  setup.md
processings_api/: Dockerfile  requirements-dev.txt  requirements.in  requirements.txt
processings_api/config/: gunicorn.conf.py  logging.ini
processings_api/src/: __init__.py  fastapi_app.py
processings_api/src/common/: json_logger.py
processings_api/src/controllers/: __init__.py  actu_ia.py
processings_api/src/models/: actu_ia_article.py  email_content.py  web_urls.py
processings_api/tests/: test_index.py
processings_api/tests/contollers/: test_controller.py  test_healthcheck.py
tts_api/: Dockerfile_notebook  Dockerfile_tts_api  readme.md  requirements.in  requirements.txt
tts_api/config/: gunicorn.conf.py  logging.ini
tts_api/src/: __init__.py  fastapi_app.py
tts_api/src/common/: json_logger.py
tts_api/src/controllers/: tts_controller.py
tts_api/src/models/: tts_request.py  wavefile_content.py
tts_api/tts_api/: __init__.py  fastapi_app.py
tts_api/tts_api/common/: json_logger.py
tts_api/tts_api/controllers/: __init__.py  background_worker.py  tts_controller.py
tts_api/tts_api/models/: tts_request.py  wavefile_content.py
