[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]

[tool.setuptools.packages.find]
where = ["src", "config"]

[project]
name = "your_project_name"
description = "Project description"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11, <3.14"
dynamic = ["version"]
authors = [
    { name = "your name", email = "you@email.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Repository = "https://github.com/fxfabre/news_feed"

[tool.pytest.ini_options]
pythonpath="src"
addopts = [
    "--cov=src/",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = [
    # For passlib
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.mypy]
files = "src"
mypy_path = "src"
namespace_packages = true
show_error_codes = true
show_column_numbers = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "D417",  # requires documentation for every function parameter.
#    "I001",  # Import block un-sorted
    "UP015",  # Un-necessary arg ("r" in open)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
